# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pt_hv_parse"
version = "0.1.0"
description = "解析高压参数"
readme = "README.md"
authors = ["hupo <3222973652@qq.com>"]
license = "MIT"
repository = "https://github.com/iceNo9/pt_hv_parse"
homepage = "https://github.com/iceNo9/pt_hv_parse"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"pt_hv_parse" = "pt_hv_parse.__main__:app"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11.9"

typer = {extras = ["all"], version = "^0.4.0"}
rich = "^10.14.0"
nuitka = "^2.7.12"
bokeh = "^3.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-html = "^4.1.1"
pytest-cov = "^5.0.0"
bandit = "^1.7.10"
ruff = "^0.14.14"
pre-commit = "^2.21.0"
coverage = "^7.2.7"
coverage-badge = "^1.1.0"
safety = "^3.2.10"
darglint = "^1.8.1"

[tool.ruff]
# https://beta.ruff.rs/docs/settings/
# https://docs.astral.sh/ruff/configuration/
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
respect-gitignore = true

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
extend-select = ["I"]
exclude = ["*.ipynb"]
ignore = ["F401"]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
exclude = ["*.ipynb"]
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["pt_hv_parse", "tests"]
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.darglint]
strictness = "short"
docstring_style = "google"